<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="410dp"
                android:layout_height="181dp"
                android:clickable="false"
                android:contentDescription="@string/free_delevery_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/free_delevery_on_orders_above_10000"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26999998">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/jumia_mall_description"
                        app:srcCompat="@drawable/jumia_mall" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/jumia_global_description"
                        app:srcCompat="@drawable/jumia_global" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/jumia_prime_description"
                        app:srcCompat="@drawable/jumia_prime"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/jumia_bill_description"
                        app:srcCompat="@drawable/jumia_bill" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/jumia_mall_description"
                        android:textAlignment="center"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/jumia_global_description"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/jumia_prime_description"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/jumia_bill_description"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#D30101">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="464dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deals"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="251dp"
                    android:layout_height="227dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="207dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/gliding_description"
                        app:srcCompat="@drawable/glidin_steam" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="218dp"
                        android:contentDescription="@string/cotton_description"
                        app:srcCompat="@drawable/cotton_crewneck" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>